--- a/Assets/Localization/Localization.json
+++ b/Assets/Localization/Localization.json
@@ -282,23 +282,23 @@
   },
   {
     "key": "INTERACTABLE_DINO_NUGGETS_PACK_BOX",
-    "tr": "Dinogget™ Paketi Al",
-    "en": "Take Dinoggets™ Pack",
-    "zh": "拿一包迪诺块™",
-    "ja": "ダイナゲット™のパックを取る",
-    "es": "Tomar Paquete De Dinoggets™",
-    "ru": "Взять Упаковку Диноггетов™",
-    "pt": "Pegar Pacote De Dinoggets™"
+    "tr": "Dinogget Paketi Al",
+    "en": "Take Dinoggets Pack",
+    "zh": "拿一包迪诺块",
+    "ja": "ダイナゲットのパックを取る",
+    "es": "Tomar Paquete De Dinoggets",
+    "ru": "Взять Упаковку Диноггетов",
+    "pt": "Pegar Pacote De Dinoggets"
   },
   {
     "key": "INTERACTABLE_SMILEY_FRIES_PACK_BOX",
-    "tr": "Mutlu Patatesler™ Paketi Al",
-    "en": "Take Happy Fries™ Pack",
-    "zh": "拿一包开心薯条™",
-    "ja": "ハッピーポテト™のパックを取る",
-    "es": "Tomar Paquete De Papas Felices™",
-    "ru": "Взять Упаковку Веселой Картошки™",
-    "pt": "Pegar Pacote De Batatas Felizes™"
+    "tr": "Mutlu Patatesler Paketi Al",
+    "en": "Take Happy Fries Pack",
+    "zh": "拿一包开心薯条",
+    "ja": "ハッピーポテトのパックを取る",
+    "es": "Tomar Paquete De Papas Felices",
+    "ru": "Взять Упаковку Веселой Картошки",
+    "pt": "Pegar Pacote De Batatas Felizes"
   },
   {
     "key": "INTERACTABLE_CRISPY_CHICKEN_PACK_BOX",
@@ -782,23 +782,23 @@
   },
   {
     "key": "GRABABLE_DINO_NUGGETS_PACK",
-    "tr": "Dinogget™ Paketi",
-    "en": "Dinoggets™ Pack",
-    "zh": "一包迪诺块™",
-    "ja": "ダイナゲット™のパック",
-    "es": "Paquete De Dinoggets™",
-    "ru": "Упаковка Диноггетов™",
-    "pt": "Pacote De Dinoggets™"
+    "tr": "Dinogget Paketi",
+    "en": "Dinoggets Pack",
+    "zh": "一包迪诺块",
+    "ja": "ダイナゲットのパック",
+    "es": "Paquete De Dinoggets",
+    "ru": "Упаковка Диноггетов",
+    "pt": "Pacote De Dinoggets"
   },
   {
     "key": "GRABABLE_SMILEY_FRIES_PACK",
-    "tr": "Mutlu Patatesler™ Paketi",
-    "en": "Happy Fries™ Pack",
-    "zh": "一包开心薯条™",
-    "ja": "ハッピーポテト™のパック",
-    "es": "Paquete De Papas Felices™",
-    "ru": "Упаковка Веселой Картошки™",
-    "pt": "Pacote De Batatas Felizes™"
+    "tr": "Mutlu Patatesler Paketi",
+    "en": "Happy Fries Pack",
+    "zh": "一包开心薯条",
+    "ja": "ハッピーポテトのパック",
+    "es": "Paquete De Papas Felices",
+    "ru": "Упаковка Веселой Картошки",
+    "pt": "Pacote De Batatas Felizes"
   },
   {
     "key": "GRABABLE_CRISPY_CHICKEN_PACK",
@@ -1332,83 +1332,83 @@
   },
   {
     "key": "GRABABLE_DINO_NUGGETS_FROZEN",
-    "tr": "Dinogget™ (Donuk)",
-    "en": "Dinoggets™ (Frozen)",
-    "zh": "迪诺块™ (冷冻)",
-    "ja": "ダイナゲット™ (冷凍)",
-    "es": "Dinoggets™ (Congelados)",
-    "ru": "Диноггеты™ (Замороженные)",
-    "pt": "Dinoggets™ (Congelados)"
+    "tr": "Dinogget (Donuk)",
+    "en": "Dinoggets (Frozen)",
+    "zh": "迪诺块 (冷冻)",
+    "ja": "ダイナゲット (冷凍)",
+    "es": "Dinoggets (Congelados)",
+    "ru": "Диноггеты (Замороженные)",
+    "pt": "Dinoggets (Congelados)"
   },
   {
     "key": "GRABABLE_DINO_NUGGETS_FRIED",
-    "tr": "Dinogget™ (Kızarmış)",
-    "en": "Dinoggets™ (Fried)",
-    "zh": "迪诺块™ (炸过)",
-    "ja": "ダイナゲット™ (揚げた)",
-    "es": "Dinoggets™ (Fritos)",
-    "ru": "Диноггеты™ (Пожаренные)",
-    "pt": "Dinoggets™ (Fritos)"
+    "tr": "Dinogget (Kızarmış)",
+    "en": "Dinoggets (Fried)",
+    "zh": "迪诺块 (炸过)",
+    "ja": "ダイナゲット (揚げた)",
+    "es": "Dinoggets (Fritos)",
+    "ru": "Диноггеты (Пожаренные)",
+    "pt": "Dinoggets (Fritos)"
   },
   {
     "key": "GRABABLE_DINO_NUGGETS_BURNT",
-    "tr": "Dinogget™ (Yanmış)",
-    "en": "Dinoggets™ (Burnt)",
-    "zh": "迪诺块™ (焦)",
-    "ja": "ダイナゲット™ (焦げた)",
-    "es": "Dinoggets™ (Quemados)",
-    "ru": "Диноггеты™ (Сгоревшие)",
-    "pt": "Dinoggets™ (Queimados)"
+    "tr": "Dinogget (Yanmış)",
+    "en": "Dinoggets (Burnt)",
+    "zh": "迪诺块 (焦)",
+    "ja": "ダイナゲット (焦げた)",
+    "es": "Dinoggets (Quemados)",
+    "ru": "Диноггеты (Сгоревшие)",
+    "pt": "Dinoggets (Queimados)"
   },
   {
     "key": "GRABABLE_DINO_NUGGETS_IN_BOX",
-    "tr": "Dinogget™",
-    "en": "Dinoggets™",
-    "zh": "迪诺块™",
-    "ja": "ダイナゲット™",
-    "es": "Dinoggets™",
-    "ru": "Диноггеты™",
-    "pt": "Dinoggets™"
+    "tr": "Dinogget",
+    "en": "Dinoggets",
+    "zh": "迪诺块",
+    "ja": "ダイナゲット",
+    "es": "Dinoggets",
+    "ru": "Диноггеты",
+    "pt": "Dinoggets"
   },
   {
     "key": "GRABABLE_SMILEY_FRIES_FROZEN",
-    "tr": "Mutlu Patatesler™ (Donuk)",
-    "en": "Happy Fries™ (Frozen)",
-    "zh": "开心薯条™ (冷冻)",
-    "ja": "ハッピーポテト™ (冷凍)",
-    "es": "Papas Felices™ (Congeladas)",
-    "ru": "Веселая Картошка™ (Замороженная)",
-    "pt": "Batatas Felizes™ (Congeladas)"
+    "tr": "Mutlu Patatesler (Donuk)",
+    "en": "Happy Fries (Frozen)",
+    "zh": "开心薯条 (冷冻)",
+    "ja": "ハッピーポテト (冷凍)",
+    "es": "Papas Felices (Congeladas)",
+    "ru": "Веселая Картошка (Замороженная)",
+    "pt": "Batatas Felizes (Congeladas)"
   },
   {
     "key": "GRABABLE_SMILEY_FRIES_FRIED",
-    "tr": "Mutlu Patatesler™ (Kızarmış)",
-    "en": "Happy Fries™ (Fried)",
-    "zh": "开心薯条™ (炸过)",
-    "ja": "ハッピーポテト™ (揚げた)",
-    "es": "Papas Felices™ (Fritas)",
-    "ru": "Веселая Картошка™ (Пожаренная)",
-    "pt": "Batatas Felizes™ (Fritas)"
+    "tr": "Mutlu Patatesler (Kızarmış)",
+    "en": "Happy Fries (Fried)",
+    "zh": "开心薯条 (炸过)",
+    "ja": "ハッピーポテト (揚げた)",
+    "es": "Papas Felices (Fritas)",
+    "ru": "Веселая Картошка (Пожаренная)",
+    "pt": "Batatas Felizes (Fritas)"
   },
   {
     "key": "GRABABLE_SMILEY_FRIES_BURNT",
-    "tr": "Mutlu Patatesler™ (Yanmış)",
-    "en": "Happy Fries™ (Burnt)",
-    "zh": "开心薯条™ (焦)",
-    "ja": "ハッピーポテト™ (焦げた)",
-    "es": "Papas Felices™ (Quemadas)",
-    "ru": "Веселая Картошка™ (Сгоревшая)",
-    "pt": "Batatas Felizes™ (Queimadas)"
+    "tr": "Mutlu Patatesler (Yanmış)",
+    "en": "Happy Fries (Burnt)",
+    "zh": "开心薯条 (焦)",
+    "ja": "ハッピーポテト (焦げた)",
+    "es": "Papas Felices (Quemadas)",
+    "ru": "Веселая Картошка (Сгоревшая)",
+    "pt": "Batatas Felizes (Queimadas)"
   },
   {
     "key": "GRABABLE_SMILEY_FRIES_IN_BOX",
-    "tr": "Mutlu Patatesler™",
-    "en": "Happy Fries™",
-    "zh": "开心薯条™",
-    "ja": "ハッピーポテト™",
-    "es": "Papas Felices™",
-    "ru": "Веселая Картошка™",
-    "pt": "Batatas Felizes™"
+    "tr": "Mutlu Patatesler",
+    "en": "Happy Fries",
+    "zh": "开心薯条",
+    "ja": "ハッピーポテト",
+    "es": "Papas Felices",
+    "ru": "Веселая Картошка",
+    "pt": "Batatas Felizes"
   },
   {
     "key": "GRABABLE_CRISPY_CHICKEN_FROZEN",
